--- a/tomy/src/app/globals.css
+++ b/tomy/src/app/globals.css
@@ -27,3 +27,20 @@ body {
 }
 
 
+#card {
+  transition: transform 0.5s;
+  will-change: transform; /* This helps with performance */
+}
+
+.holographic-overlay {
+  background-blend-mode: overlay;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: overlay;
+}
+
+
