--- a/tomy/src/app/globals.css
+++ b/tomy/src/app/globals.css
@@ -43,4 +43,13 @@ body {
   mix-blend-mode: overlay;
 }
 
+.fade-in {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.fade-in.visible {
+  opacity: 1;
+}
+
 
