Titre  musique: défilement + couleur  + taille

--- a/tomy/src/app/globals.css
+++ b/tomy/src/app/globals.css
@@ -203,4 +203,11 @@ body {
   transform: translate(-50%, -50%);
 }
 
-
+@keyframes scrollText {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
