--- a/tomy/src/app/globals.css
+++ b/tomy/src/app/globals.css
@@ -219,3 +219,33 @@ body {
 .animate-fadeIn {
   animation: fadeIn 0.6s ease-in-out;
 }
+
+@keyframes revealFromTop {
+  0% {
+    clip-path: inset(0 0 100% 0);
+  }
+  100% {
+    clip-path: inset(0 0 0% 0);
+  }
+}
+
+.reveal-animation {
+  animation: revealFromTop 2s ease-out forwards;
+}
+
+@keyframes revealHachured {
+  0% {
+    clip-path: polygon(
+      0% 0%, 100% 0%, 100% 0%, 0% 0%
+    );
+  }
+  100% {
+    clip-path: polygon(
+      0% 0%, 100% 0%, 100% 100%, 0% 100%
+    );
+  }
+}
+
+.reveal-hachured {
+  animation: revealHachured 5s steps(100) forwards;
+}
